--- a/build.xml
+++ b/build.xml
@@ -1,17 +1,30 @@
 <?xml version="1.0"?>
-	<project name="Hello Ant and JDBC WITH PosrgeSQL" default="info">
-	<property name="customProperty" value="--valueTest--"/>
+	<project name="Hello Ant and JDBC WITH PosrgeSQL" default="build">
+	<property name="src.dir" value="src/java"/>
+	<property name="build.dir" value="bin/classes"/>
+	<property name="lib.dir" value="lib"/>
+	<property name="name" value="helloAnt"/>
 	<property file="build.properties"/>
 	
-	<target name="info">
-		<echo> Hello World - Welcome our project </echo>
-		<echo> Demonstration use default property </echo>
-		<echo> For example - prop ant.version: ${ant.version} </echo>
-		<echo> This is our custom property ${customProperty} </echo>
-		<echo> This is example to use of properties load from external file</echo>
-		<echo> Properties for to connect to DB</echo>
-		<echo> host - ${host}</echo>
-		<echo> user - ${user}</echo>
-		<echo> password - ${password}</echo>
+	<path id="master-classpath">
+		<fileset dir="${lib.dir}">
+			<include name="*.jar"/>
+		</fileset>
+		<pathelement path="${build.dir}"/>
+	</path>
+	
+	<target name="build" depends="clean" description="Compile source java files">
+		<mkdir dir="${build.dir}"/>
+		<javac includeantruntime="false" destdir="${build.dir}" source="1.9" target="1.9">
+			<src path="${src.dir}"/>
+			<classpath refid="master-classpath"/>
+		</javac>
+	</target>
+	<target name="clean" description="Clean output directories">
+		<delete>
+         <fileset dir="${build.dir}">
+            <include name="**/*.class"/>
+         </fileset>
+      </delete>
 	</target>
 </project>
