run sql scripts and connect slf4j

--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,10 @@
-host=localhost
-user=posgres
-password=111
-classpath=lib
+db.local.host=jdbc:localhost
+db.local.user=postgres
+db.local.password=root
+db.local.driver=org.postgresql.Driver
+db.local.dbname=records
+db.local.url=jdbc:postgresql://localhost/records?create=true;
+db.local.url_createDB=jdbc:postgresql://localhost:5432/?allowMultiQueries=true
+
+
+
