--- a/ivy.xml
+++ b/ivy.xml
@@ -1,13 +1,17 @@
 <ivy-module version="2.0">
     <info organisation="net.vrakin" module="AntJDBC_PostgreSQL"/>
     <dependencies>
-		<!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
-		<dependency org="postgresql" name="postgresql" rev="9.1-901-1.jdbc4"/>
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<dependency org="org.postgresql" name="postgresql" rev="42.2.19"/>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency org="junit" name="junit" rev="4.13.2"/>
 		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core -->
 		<dependency org="org.hamcrest" name="hamcrest-core" rev="2.2"/>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency org="com.carrotsearch.randomizedtesting" name="junit4-ant" rev="2.0.9"/>
+		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-core -->
+		<dependency org="ch.qos.logback" name="logback-core" rev="1.2.3"/>
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+		<dependency org="org.slf4j" name="slf4j-api" rev="1.7.30"/>
     </dependencies>
 </ivy-module>
